Fixing some wording changes

--- a/views/clickedButton.pug
+++ b/views/clickedButton.pug
@@ -3,4 +3,5 @@ extends layout
 block content 
     <!-- Image courtesy of bootstrap tutorial: https://mdbootstrap.com/snippets/standard/ascensus/2893034 -->
     div(class="bg-image" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg'); height: 100vh")
-    div Hooray! You were successful!
+        div(class="text-center") 
+            h1 Hooray! You were successful!
